Updated swagger docs, and setup validation and docs separately
